--- a/test/index.html
+++ b/test/index.html
@@ -1,26 +1,35 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en"></html>
 <head>
-	<meta charset="UTF-8">
-	<title>sample</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="js/jquery.textEllipsis.js"></script>
+  <meta charset="UTF-8">
+  <title>sample</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="js/jquery.textEllipsis.js"></script>
 </head>
 <body>
-	<header>
-		<h1>jquery.textEllipsis</h1>
-	</header>
-
-	<script>
-		$(function(){
-			$(".target").ellipsis({limit: 100});
-		});
-	</script>
-
-	<p class="target">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.
-	</p>
-
+  <header>
+    <h1>jquery.textEllipsis</h1>
+  </header>
+  <script>
+    $(function(){
+     $(".target").ellipsis({limit: 100});
+    });
+    
+  </script>
 </body>
-</html>
+<p class="target1">
+  <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
+</p>
+<p class="target2">
+  <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
+</p>
+<p class="target3">
+  <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
+</p>
+<p class="target4">
+  <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
+</p>
+<p class="target5">
+  <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
+</p>
