--- a/test/index.html
+++ b/test/index.html
@@ -13,23 +13,27 @@
   </header>
   <script>
     $(function(){
-     $(".target").ellipsis({limit: 100});
+     $(".target1").ellipsis({limit: 100});
+     $(".target2").ellipsis({limit: 70});
+     $(".target3").ellipsis({limit: 40});
+     $(".target4").ellipsis({limit: 60});
+     $(".target5").ellipsis({limit: 20});
     });
     
   </script>
 </body>
-<p class="target1">
+<p class="target target1">
   <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
 </p>
-<p class="target2">
+<p class="target target2">
   <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
 </p>
-<p class="target3">
+<p class="target target3">
   <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
 </p>
-<p class="target4">
+<p class="target target4">
   <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
 </p>
-<p class="target5">
+<p class="target target5">
   <Lorem>ipsum dolor sit amet, consectetur adipisicing elit. Quas animi, accusantium dolorem. Cum quibusdam reprehenderit blanditiis deleniti dignissimos, explicabo ea eius tempora maiores modi nam qui magni. Corporis, explicabo fugiat.</Lorem>
 </p>
